[package]
name = "cch23-0xthefool"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
base64 = "0.21.5"
reqwest = { version = "0.11.22", features = ["json"] }
serde = "1.0.193"
serde_json = "1.0.108"
shuttle-axum = "0.34"
shuttle-runtime = "0.34"
tokio = "1.28.2"
tracing = "0.1.40"
