[package]
name = "cch23-0xthefool"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.6.20", features = ["macros", "multipart", "ws"] }
base64 = "0.21.5"
chrono = "0.4.31"
futures = "0.3.29"
futures-util = { version = "0.3.29", features = ["sink"] }
git2 = "0.18.1"
html-escape = "0.2.13"
image = "0.24.7"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["json"] }
serde = "1.0.193"
serde_json = "1.0.108"
sha256 = "1.4.0"
shuttle-axum = "0.35"
shuttle-runtime = "0.35"
shuttle-shared-db = { version = "0.35.1", features = ["postgres"] }
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-native-tls"] }
tar = "0.4.40"
tempfile = "3.8.1"
tokio = "1.28.2"
tower-http = { version = "0.4.0", features = ["fs"] }
tracing = "0.1.40"
ulid = "1.1.0"
uuid = "1.6.1"
